<resources>
    <string name="app_name">All Keys</string>
    <string name="label_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="no_key">---</string>
    <string name="no_chord">---</string>
    <string name="tempo">-- Tempo --</string>
    <string name="tempo_bpm">-- Tempo: %1$d bpm --</string>
    <string name="key_and_chord">%1$s %2$s</string>
    <string name="choose_keys">Choose Keys</string>
    <string name="choose_chords">Choose Chords</string>
    <string name="play_root_notes">Play Root Notes</string>
    <string name="metronome_sounds">Metronome Sounds</string>
    <string name="custom_chords">Custom Chords</string>
    <string name="genre">-- Genre --</string>
    <string name="key">-- Key --</string>
    <string name="chord">-- Chord --</string>
    <string name="general">-- General --</string>
    <string name="metronome">-- Metronome --</string>
    <string name="root_notes">-- Root Notes --</string>
    <string name="beats_per_bar">Beats per Bar</string>
    <string name="bars_per_chord">Bars per Chord</string>
    <string name="metronome_accent">Accent Sound</string>
    <string name="metronome_click">Click Sound</string>
    <string name="fab_description">Open settings</string>
    <string name="root_note_instrument">Instrument</string>
    <string name="title_activity_settings">ActivitySettings</string>
    <string name="metronome_volume">Metronome Volume</string>
    <string name="root_note_volume">Root Note Volume</string>
    <string name="root_note_walking">Walking Bass</string>
    <string name="theme">Theme</string>
    <string name="next_chord_mode">Next Chord</string>
    <string name="accompaniment">Accompaniment</string>
    <string name="play_accompaniment">Play Chord Accompaniment</string>
    <string name="accompaniment_volume">Accompaniment Volume</string>
    <string name="playback">Playback</string>
    <string name="choose_genre">Choose Genre</string>
    <string name="credits_title">Credits</string>
    <string name="accesssibility_beats_per_bar">Adjust the number of beats per bar</string>
    <string name="accesssibility_bars_per_chord">Adjust the number of bars per chord</string>
    <string name="accessibility_choose_keys">Choose which keys to generate chords for</string>
    <string name="accessibility_choose_chords">Choose which chords to generate</string>
    <string name="accessibility_next_chord_mode">Select when the next chord hint is displayed</string>
    <string name="accessibility_metronome_volume">Set the volume of the Metronome</string>
    <string name="accessibility_metronome_accent">Set the sound for beat one of the metronome</string>
    <string name="accessibility_metronome_click">Set the sound for the other beats of the metronome</string>
    <string name="accessibility_root_note_volume">Choose the volume for the root note playback</string>
    <string name="accessibility_root_note_instrument">Select the instrument sound to play root notes</string>
    <string name="accessibility_accompaniment_volume">Set the volume of the accompaniment</string>
    <string name="accessibility_theme">Choose the app theme</string>
    <string name="accessibility_credits">Display the credits for All Keys</string>
    <string name="accessibility_tempo">Set the tempo for playback</string>
    <string name="accessibility_choose_genre">Select the playback genre</string>
    <string name="accessibility_metronome_sounds">Enable or disable the metronome</string>
    <string name="accessibility_play_root_notes">Enable or disable root notes</string>
    <string name="accessibility_root_note_walking">Enable or disable the walking bass line</string>
    <string name="accessibility_play_accompaniment">Enable or disable accompaniment</string>
    <string name="accessibility_metronome_indicator">Display of the current beat within the bar</string>
    <string name="accessibility_chord_panel">Displays the current key and chord</string>
</resources>