<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!-- GENRE -->
    <androidx.preference.PreferenceCategory
        android:title="@string/genre"
        >
        <androidx.preference.ListPreference
            android:key="genre"
            android:title="@string/choose_genre"
            app:useSimpleSummaryProvider="true"
            />
    </androidx.preference.PreferenceCategory>

    <!-- PLAYBACK -->
    <androidx.preference.PreferenceCategory
        android:title="@string/playback"
        >
        <androidx.preference.MultiSelectListPreference
            android:key="selected_keys"
            android:entries="@array/key_groups"
            android:entryValues="@array/key_groups"
            android:title="@string/choose_keys"
            />
        <androidx.preference.MultiSelectListPreference
            android:key="selected_chords"
            android:title="@string/choose_chords"
            />
        <androidx.preference.DropDownPreference
            android:key="next_chord_mode"
            android:title="@string/next_chord_mode"
            android:entries="@array/next_chord_modes"
            app:useSimpleSummaryProvider="true"
            />
        <nz.co.rylogic.allkeys.SeekBarPreferenceRange
            android:key="beats_per_bar"
            android:title="@string/beats_per_bar"
            android:min="1"
            android:max="7"
            />
        <nz.co.rylogic.allkeys.SeekBarPreferenceRange
            android:key="bars_per_chord"
            android:title="@string/bars_per_chord"
            android:min="1"
            android:max="8"
            />
    </androidx.preference.PreferenceCategory>

    <!-- METRONOME -->
    <androidx.preference.PreferenceCategory
        android:title="@string/metronome"
        >
        <androidx.preference.SwitchPreference
            android:key="metronome_sounds"
            android:title="@string/metronome_sounds"
            />
        <nz.co.rylogic.allkeys.SeekBarPreferenceRange
            android:key="metronome_volume"
            android:title="@string/metronome_volume"
            android:min="0"
            android:max="100"
            />
        <androidx.preference.DropDownPreference
            android:key="metronome_accent"
            android:title="@string/metronome_accent"
            android:entries="@array/metronome_sounds"
            app:useSimpleSummaryProvider="true"
            />
        <androidx.preference.DropDownPreference
            android:key="metronome_click"
            android:title="@string/metronome_click"
            android:entries="@array/metronome_sounds"
            app:useSimpleSummaryProvider="true"
            />
    </androidx.preference.PreferenceCategory>

    <!-- ROOT NOTES -->
    <androidx.preference.PreferenceCategory
        android:title="@string/root_notes"
        >
        <androidx.preference.SwitchPreference
            android:key="root_note_sounds"
            android:title="@string/play_root_notes"
            />
        <nz.co.rylogic.allkeys.SeekBarPreferenceRange
            android:key="root_note_volume"
            android:title="@string/root_note_volume"
            android:min="0"
            android:max="100"
            />
        <androidx.preference.DropDownPreference
            android:key="root_note_instrument"
            android:title="@string/root_note_instrument"
            android:entries="@array/root_note_instruments"
            app:useSimpleSummaryProvider="true"
            />
        <androidx.preference.SwitchPreference
            android:key="root_note_walking"
            android:title="@string/root_note_walking"
            />
    </androidx.preference.PreferenceCategory>

    <!-- COMPING -->
    <androidx.preference.PreferenceCategory
        android:title="@string/accompaniment"
        >
        <androidx.preference.SwitchPreference
            android:key="chord_comp_sounds"
            android:title="@string/play_accompaniment"
            />
        <nz.co.rylogic.allkeys.SeekBarPreferenceRange
            android:key="chord_comp_volume"
            android:title="@string/accompaniment_volume"
            android:min="0"
            android:max="100"
            />
    </androidx.preference.PreferenceCategory>

    <!-- GENERAL -->
    <androidx.preference.PreferenceCategory
        android:title="@string/general"
        >
        <androidx.preference.DropDownPreference
            android:key="theme"
            android:title="@string/theme"
            android:entries="@array/themes"
            app:useSimpleSummaryProvider="true"
            />
        <androidx.preference.Preference
            android:key="credits"
            android:title="@string/credits_title"
            />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
