<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:text="@string/chord"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/panel_background"
        android:minWidth="@dimen/chord_panel_min_size"
        android:minHeight="@dimen/chord_panel_min_size"
        android:contentDescription="@string/accessibility_chord_panel"
        >
        <TextView
            android:id="@+id/text_chord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="@dimen/chord_text_size"
            android:textColor="@color/chord_text"
            android:text="@string/no_chord"
            />
        <TextView
            android:id="@+id/text_chord_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="@dimen/chord_next_text_size"
            android:textColor="@color/chord_next_text"
            android:text="@string/no_chord"
            />
    </LinearLayout>
</LinearLayout>