<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    >
    <TextView
        android:id="@+id/label_tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:text="@string/tempo"
        />
    <SeekBar
        android:id="@+id/slider_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tempo_slider_padding"
        android:minWidth="@dimen/tempo_slider_min_width"
        android:min="40"
        android:max="240"
        android:progress="120"
        android:thumb="@drawable/thumb"
        android:contentDescription="@string/accessibility_tempo"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:contentDescription="@string/accessibility_metronome_indicator"
        >
        <GridLayout
            android:id="@+id/beat0"
            android:layout_width="@dimen/metronome_box_size"
            android:layout_height="@dimen/metronome_box_size"
            android:layout_marginHorizontal="@dimen/metronome_box_spacing"
            android:background="@color/beat0"
            />
        <GridLayout
            android:id="@+id/beat1"
            android:layout_width="@dimen/metronome_box_size"
            android:layout_height="@dimen/metronome_box_size"
            android:layout_marginHorizontal="@dimen/metronome_box_spacing"
            android:background="@color/beat1"
            />
        <GridLayout
            android:id="@+id/beat2"
            android:layout_width="@dimen/metronome_box_size"
            android:layout_height="@dimen/metronome_box_size"
            android:layout_marginHorizontal="@dimen/metronome_box_spacing"
            android:background="@color/beat1"
            />
        <GridLayout
            android:id="@+id/beat3"
            android:layout_width="@dimen/metronome_box_size"
            android:layout_height="@dimen/metronome_box_size"
            android:layout_marginHorizontal="@dimen/metronome_box_spacing"
            android:background="@color/beat1"
            />
        <GridLayout
            android:id="@+id/beat4"
            android:layout_width="@dimen/metronome_box_size"
            android:layout_height="@dimen/metronome_box_size"
            android:layout_marginHorizontal="@dimen/metronome_box_spacing"
            android:background="@color/beat1"
            />
        <GridLayout
            android:id="@+id/beat5"
            android:layout_width="@dimen/metronome_box_size"
            android:layout_height="@dimen/metronome_box_size"
            android:layout_marginHorizontal="@dimen/metronome_box_spacing"
            android:background="@color/beat1"
            />
        <GridLayout
            android:id="@+id/beat6"
            android:layout_width="@dimen/metronome_box_size"
            android:layout_height="@dimen/metronome_box_size"
            android:layout_marginHorizontal="@dimen/metronome_box_spacing"
            android:background="@color/beat1"
            />
    </LinearLayout>
</LinearLayout>
